Removed the obsolete G-LM method.

--- a/PBPK_evaluation.ipynb
+++ b/PBPK_evaluation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbo9+CSrm1jDiIe+pOYp2j",
+      "authorship_tag": "ABX9TyN3aRnugR4qZQIOPxUm8ud/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,13 +38,12 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title The code that is used ot create the intervals (run this first).\n",
+        "#@title The code that is used ot create the intervals (run this first)\n",
         "import numpy as np\n",
         "import scipy\n",
         "from scipy import stats\n",
         "\n",
-        "def CI_I_LD(observations, predictions,\n",
-        "                                          alpha=0.1):\n",
+        "def CI_I_LD(observations, predictions, alpha=0.1):\n",
         "    \"\"\"This function calculates a confidence interval using the individual\n",
         "    predictions.\n",
         "\n",
@@ -86,34 +85,8 @@
         "    print(f'{100*(1-alpha)}% confidence interval: {CI}')\n",
         "\n",
         "\n",
-        "def CI_G_LD(GM_observed, GM_predicted, GCV_observed, N, alpha=0.1):\n",
-        "    \"\"\"This function calculates a confidence interval using the observed\n",
-        "       geometric mean, the predicted geometric mean, and the coefficient\n",
-        "       of variation.\n",
-        "\n",
-        "    Arguments:\n",
-        "      GM_observed (float): The geometric mean of the observations\n",
-        "      GM_predicted (float): The geometric mean of the predictions\n",
-        "      GCV_observed (float): The geometric coefficient of variation. Note that values are\n",
-        "        often reported as percentiles in literature. If 70% is reported, use 0.7.\n",
-        "      N (int): The number of observations.\n",
-        "      alpha (float): Determines the significance of the confidence interval.\n",
-        "        The significance is (1-alpha/2)*100%.\n",
-        "\n",
-        "    Return:\n",
-        "      None\n",
-        "    \"\"\"\n",
-        "    average = np.log(GM_observed)\n",
-        "    var = np.log(GCV_observed**2 + 1)\n",
-        "    t = scipy.stats.t(N-1).ppf(1-alpha/2)\n",
-        "    loglowerbound = average + t * np.sqrt(var / N)\n",
-        "    logupperbound = average - t * np.sqrt(var / N)\n",
-        "    CI = [GM_predicted / np.exp(loglowerbound), GM_predicted / np.exp(logupperbound)]\n",
-        "    print(f'GM-ratio: {GM_predicted / GM_observed}')\n",
-        "    print(f'{100*(1-alpha)}% confidence interval: {CI}')\n",
-        "\n",
-        "def CI_G_LD_small(GM_observed, GM_predicted, GCV_observed, GCV_predicted,\n",
-        "                  N_observed, N_predicted, alpha=0.1):\n",
+        "def CI_G_LD(GM_observed, GM_predicted, GCV_observed, GCV_predicted,\n",
+        "            N_observed, N_predicted, alpha=0.1):\n",
         "    \"\"\"\n",
         "    Calculate CI using the GLM approach and considering variance of predictions.\n",
         "\n",
@@ -142,7 +115,7 @@
         "    var_observed = np.log(GCV_observed**2 + 1)\n",
         "    var_predicted = np.log(GCV_predicted**2 + 1)\n",
         "    var_total = var_observed / N_observed + var_predicted / N_predicted\n",
-        "    df = (var_observed / N_observed + var_predicted / N_predicted)**2 \\\n",
+        "    df = (var_total)**2 \\\n",
         "     / ((var_observed / N_observed)**2 / (N_observed - 1) + (var_predicted / N_predicted)**2 / (N_predicted - 1))\n",
         "    t = scipy.stats.t(df).ppf(1-alpha/2)\n",
         "    loglowerbound = average_predicted - average_observed - t * np.sqrt(var_total)\n",
@@ -152,10 +125,9 @@
         "    print(f'{100*(1-alpha)}% confidence interval: {CI}')\n"
       ],
       "metadata": {
-        "id": "EPDAGOEH9VBo",
-        "cellView": "form"
+        "id": "EPDAGOEH9VBo"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -207,9 +179,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IGbGUp6w-sEq",
-        "outputId": "983c2f98-b546-4839-8dba-9c270cb7ddd3"
+        "outputId": "cff0e7a0-616b-4740-cb3d-fb0a49d32e2b"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,7 +196,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# G-LD appraoch large simulation"
+        "# G-LD appraoch"
       ],
       "metadata": {
         "id": "kktp5Xtn7pNh"
@@ -245,80 +217,34 @@
         "GM_observed = 120\n",
         "GM_predicted = 120\n",
         "GCV_observed = 0.4 # N.B. 40% should be entered as 0.4!\n",
-        "Number_of_subjects = 20\n",
-        "\n",
-        "try:\n",
-        "  CI_G_LD(GM_observed, GM_predicted, GCV_observed, N=Number_of_subjects, alpha=0.1)\n",
-        "\n",
-        "except NameError:\n",
-        "  print('Run the first code block first to load the necessary functions.')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tykg_Kuf8-yZ",
-        "outputId": "245ae3d7-923c-4ed5-ce1f-de2106d42eed"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "GM-ratio: 1.0\n",
-            "90.0% confidence interval: [0.8616065596990528, 1.1606225471975127]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# G-LD approach small simulation"
-      ],
-      "metadata": {
-        "id": "6HLhesPEBnLd"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "If, due to computational constraints, it is infeasible to create a large simulation, the variance of the predictions can no longer be ignored. In this case, the following function should be used. Note that in this example, the interval is slightly wider than in the previous example since we only used 100 predictions. If we set N_predicted to 10.000, we a practically identical interval."
-      ],
-      "metadata": {
-        "id": "saQGC8VzBrbO"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "GM_observed = 120\n",
-        "GM_predicted = 120\n",
-        "GCV_observed = 0.4 # N.B. 40% should be entered as 0.4!\n",
         "GCV_predicted = 0.8\n",
         "N_observed = 20\n",
-        "N_predicted = 100\n",
+        "N_predicted = 200\n",
         "\n",
         "\n",
-        "CI_G_LD_small(GM_observed=GM_observed, GM_predicted=GM_predicted, GCV_observed=GCV_observed,\n",
-        "              GCV_predicted=GCV_predicted, N_observed=N_observed, N_predicted=N_predicted, alpha=0.1)"
+        "try:\n",
+        "    CI_G_LD(GM_observed=GM_observed, GM_predicted=GM_predicted,\n",
+        "            GCV_observed=GCV_observed, GCV_predicted=GCV_predicted,\n",
+        "            N_observed=N_observed, N_predicted=N_predicted,\n",
+        "            alpha=0.1)\n",
+        "except NameError:\n",
+        "    print('Run the first code block first to load the necessary functions.')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Bh28oFUBbc6",
-        "outputId": "d7bdb108-98ae-4c59-e417-3c29837d5092"
+        "outputId": "4a2ae322-9811-4c44-e190-d144c62cff00"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "GM-ratio: 1.0\n",
-            "90.0% confidence interval: [0.8298759846566229, 1.204999323379347]\n"
+            "90.0% confidence interval: [0.8451176483617664, 1.183267207753226]\n"
           ]
         }
       ]
