--- a/2-fold_example.ipynb
+++ b/2-fold_example.ipynb
@@ -156,7 +156,7 @@
     "    if CI[0] < 2 and CI[1] > 2:\n",
     "        return 2  # Refrain\n",
     "    if CI[0] > 2:\n",
-    "        return 0  # Accept"
+    "        return 0  # Reject"
    ],
    "metadata": {
     "collapsed": false,
