Added doi to paper

--- a/PBPK_evaluation.ipynb
+++ b/PBPK_evaluation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3aRnugR4qZQIOPxUm8ud/",
+      "authorship_tag": "ABX9TyOu493mw2Ul686cnhGgn8JX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This colab contains all the necessary code in order to calcualte a confidence interval for a geometric mean ratio as is advocated in our paper  \"*Towards more RobustEvaluation of the Predictive Performance of Physiologically Based Pharmacokinetic Models: using Confidence Intervals to support use of Model-informed Dosing in Clinical Care*\", which is currently under review."
+        "This colab contains all the necessary code to calculate a confidence interval for a geometric mean ratio as is advocated in our paper:\n",
+        "\n",
+        "*van Borselen, M.D., Sluijterman, L.A.Æ., Greupink, R. et al. Towards More Robust Evaluation of the Predictive Performance of Physiologically Based Pharmacokinetic Models: Using Confidence Intervals to Support Use of Model-Informed Dosing in Clinical Care. Clin Pharmacokinet (2024). https://doi.org/10.1007/s40262-023-01326-3*\n"
       ],
       "metadata": {
         "id": "O4CFt2EiA6C7"
@@ -101,7 +103,7 @@
         "        GCV_predicted: Predicted geometric coefficient of variation\n",
         "        N_observed: Number of observed subjects\n",
         "        N_predicted: Number of predicted subjects\n",
-        "        alpha: Confidence level. The defaul value of 0.1 corresponds to 90% CI.\n",
+        "        alpha: Confidence level. The default value of 0.1 corresponds to 90% CI.\n",
         "\n",
         "    Returns:\n",
         "        CI: The (1-alpha)*100% confidence interval.\n",
@@ -127,7 +129,7 @@
       "metadata": {
         "id": "EPDAGOEH9VBo"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +183,7 @@
         "id": "IGbGUp6w-sEq",
         "outputId": "cff0e7a0-616b-4740-cb3d-fb0a49d32e2b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +239,7 @@
         "id": "-Bh28oFUBbc6",
         "outputId": "4a2ae322-9811-4c44-e190-d144c62cff00"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
