Fixed typo in error message

--- a/PBPK_evaluation.ipynb
+++ b/PBPK_evaluation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOu493mw2Ul686cnhGgn8JX",
+      "authorship_tag": "ABX9TyNs4fCdRNnr3j1oBO561Gv6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,7 +111,7 @@
         "    if type(N_observed) != int:\n",
         "      raise ValueError('N_observed must be an integer, do not use dots.')\n",
         "    if type(N_predicted) != int:\n",
-        "      raise ValueError('N_observed must be an integer, do use dots.')\n",
+        "      raise ValueError('N_predicted must be an integer, do not use dots.')\n",
         "    average_observed = np.log(GM_observed)\n",
         "    average_predicted = np.log(GM_predicted)\n",
         "    var_observed = np.log(GCV_observed**2 + 1)\n",
